<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_local">

    <fragment
        android:id="@+id/navigation_local"
        android:name="ch.ost.rj.mge.timer.ui.local.LocalFragment"
        android:label="@string/title_local"
        tools:layout="@layout/fragment_local" />

    <fragment
        android:id="@+id/navigation_world"
        android:name="ch.ost.rj.mge.timer.ui.world.WorldFragment"
        android:label="@string/title_world"
        tools:layout="@layout/fragment_world" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ch.ost.rj.mge.timer.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>