<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.world.WorldFragment"
    style="@style/Theme.Timer">

    <RelativeLayout
        android:id="@+id/SelectGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/country_select_from"
            style="@style/Theme.Timer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/timezone_calculator_from" />

        <Button
            android:id="@+id/button_time"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/country_select_from"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:text="@string/set_time"
            android:ems="10" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/button_time"
            android:layout_marginTop="12dp"
            android:layout_below="@id/button_time"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/country_select_from"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:text="@string/set_date"
            android:ems="10" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/button_date"
            android:layout_marginTop="12dp"
            android:layout_below="@id/button_date"
            android:textSize="12sp"/>

        <Spinner
            android:id="@+id/country_select_to"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/timezone_calculator_to"
            android:layout_below="@id/textTime"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/fromLocationGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_calculate"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/SelectGroup">

        <TextView
            android:id="@+id/textLocationFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textDateFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLocationFrom"
            android:layout_alignStart="@id/textLocationFrom"
            android:layout_marginTop="12dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textTimeFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLocationFrom"
            android:layout_alignEnd="@id/textLocationFrom"
            android:layout_marginTop="12dp"
            android:textSize="24sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ToLocationGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@id/button_calculate"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fromLocationGroup">

        <TextView
            android:id="@+id/textLocationTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textDateTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLocationTo"
            android:layout_alignStart="@id/textLocationTo"
            android:layout_marginTop="12dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textTimeTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLocationTo"
            android:layout_alignEnd="@id/textLocationTo"
            android:layout_marginTop="12dp"
            android:textSize="24sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SelectGroup"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>